name:             markdown-unlit
version:          0.2.0.1
synopsis:         Literate Haskell support for Markdown
category:         Development
license:          MIT
license-file:     LICENSE
copyright:        (c) 2012 Simon Hengel
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.8
description:      Documentation is here: <https://github.com/sol/markdown-unlit#readme>

source-repository head
  type: git
  location: https://github.com/sol/markdown-unlit

library
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  exposed-modules:
      Text.Markdown.Unlit
  build-depends:
      base < 5

executable markdown-unlit
  ghc-options:
      -Wall
  hs-source-dirs:
      driver
  main-is:
      Main.hs
  build-depends:
      base
    , markdown-unlit

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  cpp-options:
      -DTEST
  hs-source-dirs:
      src, test
  main-is:
      Spec.hs
  build-depends:
      base
    , stringbuilder
    , directory
    , silently
    , hspec >= 1.3
    , QuickCheck
