name:             markdown-unlit
version:          0.2.0.1
synopsis:         Literate Haskell support for Markdown
category:         Development
license:          MIT
license-file:     LICENSE
copyright:        (c) 2012-2013 Simon Hengel
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.8
description:      Documentation is here: <https://github.com/sol/markdown-unlit#readme>

source-repository head
  type: git
  location: https://github.com/sol/markdown-unlit

library
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base == 4.*
    , base-compat
  exposed-modules:
      Text.Markdown.Unlit

executable markdown-unlit
  main-is: Main.hs
  hs-source-dirs:
      driver
  ghc-options: -Wall
  build-depends:
      base
    , markdown-unlit

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      src
    , test
  ghc-options: -Wall
  cpp-options: -DTEST
  build-depends:
      base == 4.*
    , base-compat
    , directory
    , hspec == 2.*
    , QuickCheck
    , silently
    , stringbuilder
    , temporary
